2009-10-21	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/lib/pf/pfcmd/help.pm: pfcmd schedule documentation now accurate

	* pf/bin/pfcmd, pf/cgi-bin/release.cgi, pf/html/admin/scan/scan.php:
	Nessus Scan integration
	No more special scans with tid=99999 carrying a special meaning. All
	scanning is done with command line nessus client instead of 
	Nessus::ScanLite (which lacked plugin configuration capabilities). Other
	fixes includes:
	- Removing the 1200001 violation only if one exists (fix a problem when
	  scanning from Web admin)
	- Set HOME= env before calling nessus to conf/nessus/ so the .nessusrc 
	  file is created at a location accessible from CLI and web interfaces
	- Capturing the output of the nessus call and logging it if nessus 
	  returns a non-zero exit code
	- trigger_scan is deprecated
	- Updated web admin accordingly and explicitly disabled scheduled scans

2009-10-20	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/addons/802.1X/pfcmd_ap.pl: Deleted
	* pf/addons/802.1X/rlm_perl_packetfence.pl, pf/addons/802.1X/README:
	Performance improvement in the freeradius PacketFence module
	Merged the content of pfcmd_ap.pl into rlm_perl_packetfence.pl. This 
	avoids costly forks for each radius request.
	Also took the opportunity to add validation of the db handle.

2009-10-19	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/UPGRADE, pf/NEWS: Updated NEWS and UPGRADE with all the work done
	since 1.8.4

2009-10-16	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/lib/pf/violation.pm: Improved error-handling in violation_trigger
	Reverted fix in revision 5abfb5911a05dc03e9646eb79a48653155e39278
	because it was too convoluted and replaced it with something clearer.

	* pf/conf/violations.conf: Working Nessus config sample

	* pf/bin/pfcmd: Work torwards Nessus integration
	pfcmd now handles by itself the fact that it needs to close the 
	system scan violation if the scan was successfull

	* pf/lib/pf/action.pm, pf/lib/pf/violation.pm: Slight logging changes to